@@ -36,8 +36,9 @@ Earthworm developer web pages hosted by ISTI: [http://earthworm.isti.com/trac/ea
   - **find** in *findutils* - GNU version is available at [https://www.gnu.org/software/findutils/](https://www.gnu.org/software/findutils/)
   - **tee** in *coreutils* - [https://www.gnu.org/software/coreutils/](https://www.gnu.org/software/coreutils/)
   - **wget** - [https://www.gnu.org/software/wget/](https://www.gnu.org/software/wget/)
-  - **git** - [https://git-scm.com/](https://git-scm.com/)
+  - **tar** - [https://www.gnu.org/software/tar/](https://www.gnu.org/software/tar/)
   - **unzip** - depends on your system
+  - **git** - [https://git-scm.com/](https://git-scm.com/)
 
 ## Short Help
 
@@ -485,7 +486,7 @@ There are two main groups of commands:
 1. Launching commands and start/stop containers (based on `docker run`, `docker stop` and `docker rm`).
 2. Executing commands inside already running containers (based on `docker exec`).
 
-##### Check commands within an Earthworm Environment by a Docker Sandbox Container
+##### Check execution within an Earthworm Environment by a Docker Sandbox Container
 
 Before starting to use an Earthworm Environment, or if something goes wrong, it may be useful to properly check that the basic functions are working within an Earthworm Docker Sandbox Container.
 
@@ -651,6 +652,8 @@ General commands:
     list_containers: list available Earthworm Docker Sandbox containers
                      wrap 'docker ps' containers matching name 'ew-sandbox*'.
 
+    check_required_command: check the availability of all necessary commands.
+
 ======================================================================
 Creating Earthworm Environments with name EW_ENV:
 ======================================================================
@@ -722,11 +725,11 @@ Deleting files: (POTENTIALLY DANGEROUS)
                             waveserver directories (~/ew_envs/ew_help/data/waveservers).
 
 ======================================================================
-Check commands within an Earthworm Environment by a Docker Sandbox Container:
+Check execution within an Earthworm Environment by a Docker Sandbox Container:
 ======================================================================
 
-    check:    run a series of general purpose commands within an Earthworm Environment
-              in order to verify the correct basic functioning.
+    check:    run a series of general purpose commands within an Earthworm Environment by
+              a Docker Sandbox Container in order to verify the correct basic functioning.
 
 ======================================================================
 Start/Stop Earthworm Docker Sandbox Containers:
