@@ -31,6 +31,7 @@ Release History
     - Obsfucate some make rules by prefixing the underscore character '_'.
     - Change default make command to 'make info'.
     - Add references to Github repository.
+    - Add 'make check_required_command' for checking the availability of all necessary commands.
 
 * Release 1.1.2 (2020/04/09)
     - Copy files in a Earthworm Environment by running or executing a Docker Container.
